--- a/ansible/webserver/tasks/main.yml
+++ b/ansible/webserver/tasks/main.yml
@@ -30,7 +30,7 @@
   notify: reload nginx
 
 - name: Run container with application
-  shell: docker run -d -p 127.0.0.1:8443:8080 nexus.agwes.net:8443/boxfuse-prod
+  shell: docker run -d -p 127.0.0.1:8443:8080 --restart=always nexus.agwes.net:8443/boxfuse-prod
 
 - name: Automatic renew of the certificate
   cron:
